feat(#19): add feed detail endpoint (#22)
* feat(#19): add feed detail endpoint

* feat(#19): update the query with multiple buildings

* feat(#19): update response json and the swagger documentation

* feat(#19): update the response, query and db indexes for review changes

* feat(#19): fix ballot box no negative values
